[package]
name = "bluenine"
version = "0.1.2"
authors = ["Alvaro Mongil <hello@alvaromongil.com>"]

[lib]
name = "bluenine"
path = "src/lib.rs"

[dependencies]
clap = {version = "~2.19.0", features = ["yaml"]}
rusoto_core = "0.28.0"
rusoto_sts = "0.28.0"
rusoto_dynamodb = "0.28.0"
regex = "0.2"
time = "0.1.38"
chrono = "0.4"
colored = "1.6"
