[package]
name = "bluenine"
version = "0.2.1"
authors = ["Alvaro Mongil <hello@alvaromongil.com>"]

[lib]
name = "bluenine"
path = "src/lib.rs"

[dependencies]
clap = {version = "~2.19.0", features = ["yaml"]}
rusoto_core = "0.28.0"
rusoto_sts = "0.28.0"
chrono = "0.4"
colored = "1.6"
linked-hash-map = "0.5.0"